--- a/JavaProjeler/UcuncuSeviye/arac-kiralama-portali/src/main/resources/templates/company/company.html
+++ b/JavaProjeler/UcuncuSeviye/arac-kiralama-portali/src/main/resources/templates/company/company.html
@@ -9,81 +9,125 @@
 <body>
 <div th:replace="_navbar :: header"></div>
 <div class="container">
+    <div class="row">
+        <div id="allCompaniesTable" th:switch="${allCompanies}">
+            <h2 th:case="null">Gösterilecek data bulunamadı!</h2>
+            <div th:case="*">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Tax Number</th>
+                        <th scope="col">Tax Administration</th>
+                        <th scope="col">City</th>
+                        <th scope="col">Select / Delete</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="company : ${allCompanies}">
+                        <th scope="row" th:text="${company.getId()}"></th>
+                        <td th:text="${company.getName()}"></td>
+                        <td th:text="${company.getTaxNumber()}"></td>
+                        <td th:text="${company.getTaxAdministration()}"></td>
+                        <td th:text="${company.getCity().getName()}"></td>
+                        <td>
+                            <div class="btn-group btn-group-sm" role="group">
+                                <a class="btn btn-info" th:href="@{/company/{id}(id=${company.getId()})}">Select</a>
+                                <a class="btn btn-danger" th:href="@{/company/delete/{id}(id=${company.getId()})}">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
-
-
-    <div id="allCompaniesTable" th:switch="${allCompanies}">
-        <h2 th:case="null">Gösterilecek data bulunamadı!</h2>
-        <div th:case="*">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Tax Number</th>
-                    <th scope="col">Tax Administration</th>
-                    <th scope="col">City</th>
-                    <th scope="col">Edit/Delete</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="company : ${allCompanies}">
-                    <th scope="row" th:text="${company.getId()}"></th>
-                    <td th:text="${company.getName()}"></td>
-                    <td th:text="${company.getTaxNumber()}"></td>
-                    <td th:text="${company.getTaxAdministration()}"></td>
-                    <td th:text="${company.getCity()}"></td>
-                    <td><a th:href="@{/company/{id}(id=${company.getId()})}">Edit</a> / <a th:href="@{/company/delete/{id}(id=${company.getId()})}">Delete</a></td>
-                </tr>
-                </tbody>
-            </table>
         </div>
-
     </div>
-    <div class="col">
-        <div class="card" style="width: 22rem;">
-            <div class="card-body">
-                <div th:switch="${id}">
-                    <h5 class="card-title" th:case="null">Şirket Ekle</h5>
-                    <h5 class="card-title" th:case="*">Şirket Güncelle</h5>
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 22rem;">
+
+                <div class="card-header">
+                    <div th:switch="${id}">
+                        <h5 class="card-title" th:case="null">Şirket Ekle</h5>
+                        <h5 class="card-title" th:case="*">Şirket Güncelle</h5>
+                    </div>
                 </div>
-
                 <form action="#" th:action="@{/company/add}" th:object="${company}" method="post">
-                    <input class="form-control" th:field="*{id}" type="number" hidden>
+                    <div class="card-body">
+                        <input class="form-control" th:field="*{id}" type="number" hidden>
 
-                    <label class="form-label" for="name">Name</label>
-                    <input class="form-control" type="text" th:field="*{name}" id="name" >
-                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+                        <label class="form-label" for="name">Name</label>
+                        <input class="form-control" type="text" th:field="*{name}" id="name">
+                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 
-                    <label class="form-label" for="taxNumber">Tax Number</label>
-                    <input class="form-control" type="number" th:field="*{taxNumber}" id="taxNumber" >
-                    <span th:if="${#fields.hasErrors('taxNumber')}" th:errors="*{taxNumber}"></span>
+                        <label class="form-label" for="taxNumber">Tax Number</label>
+                        <input class="form-control" type="number" th:field="*{taxNumber}" id="taxNumber">
+                        <span th:if="${#fields.hasErrors('taxNumber')}" th:errors="*{taxNumber}"></span>
 
-                    <label class="form-label" for="taxAdministration">Tax Administration</label>
-                    <input class="form-control" type="text" th:field="*{taxAdministration}" id="taxAdministration">
-                    <span th:if="${#fields.hasErrors('taxAdministration')}" th:errors="*{taxAdministration}"></span>
+                        <label class="form-label" for="taxAdministration">Tax Administration</label>
+                        <input class="form-control" type="text" th:field="*{taxAdministration}" id="taxAdministration">
+                        <span th:if="${#fields.hasErrors('taxAdministration')}" th:errors="*{taxAdministration}"></span>
 
-                    <label class="form-label" for="city">City</label>
-                    <input class="form-control" type="text" th:field="*{city}" id="city" >
-                    <span th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></span>
-
-                    <div class="btn-group d-grid gap-2 col-6 mx-auto" role="group" th:switch="${id}">
-                        <div th:case="null">
-                            <button class="btn btn-primary" type="submit" >Kaydet</button>
-                        </div>
-                        <div th:case="*" >
-                            <button class="btn btn-primary" type="submit" >Kaydet</button>
-                            <button  class="btn btn-danger" th:href="@{/company}">İptal</button>
-                        </div>
+                        <label class="form-label" for="city">Şehir Seçiniz</label>
+                        <select name="city" class="form-control" id="city">
+                            <option th:each="city : ${allCities}"
+                                    th:value="${city.getId()}"
+                                    th:text="${city.getName()}"></option>
+                        </select>
+                        <span th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></span>
 
                     </div>
+                    <div class="card-footer">
+                        <div class="btn-group" role="group" th:switch="${id}">
+                            <div th:case="null">
+                                <button class="btn btn-primary" type="submit">Kaydet</button>
+                            </div>
+                            <div th:case="*">
+                                <button class="btn btn-primary" type="submit">Edit</button>
+                                <button class="btn btn-danger" th:href="@{/company}">İptal</button>
+                            </div>
 
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
+        <div class="col">
+            <div id="allCarTable" th:switch="${id}">
+                <h5 th:case="null">Firmaya ait araçları görüntülemek için firmayı seçiniz!</h5>
+                <div class="card" th:case="*">
+                    <div class="card-header">
+                        <h5 th:text="${company.getName()} + ' ait araçlar;'"></h5>
+                    </div>
+                    <div class="card-body">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Brand</th>
+                                <th scope="col">Plate</th>
+                                <th scope="col">Km</th>
+                                <th scope="col">ModelYear</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="cc : ${company.getCars()}">
+                                <th scope="row" th:text="${cc.getId()}"></th>
+                                <td th:text="${cc.getBrand().getName()}"></td>
+                                <td th:text="${cc.getPlate()}"></td>
+                                <td th:text="${cc.getKm()}"></td>
+                                <td th:text="${cc.getModelYear()}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
 
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </div>
 <script th:src="@{/js/bootstrap.bundle.js}"></script>
 </body>
