--- a/JavaProjeler/UcuncuSeviye/arac-kiralama-portali/src/main/resources/templates/index.html
+++ b/JavaProjeler/UcuncuSeviye/arac-kiralama-portali/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
     <div class="row">
         <div class="col">
             <div class="row">
-                <h1 th:text="${baslik}"></h1>
+                <h1>Araç Kiralama Portalına hoşgeldiniz</h1>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
                         <img th:src="@{/images/arabalarTemp.jpg}" class="card-img-top" alt="...">
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
